--- a/src/App.css
+++ b/src/App.css
@@ -494,7 +494,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
 .gradient-left {
   background-image: url(/src/assets/images/gradient-left.png);
   width: 100%;
-  height: 290vh;
+  height: 300vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -881,6 +881,12 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
   width: 45%;
 }.banner-2nd{
   height: 30vh;
+}.gradient-left {
+  background-image: url(/src/assets/images/gradient-left.png);
+  width: 100%;
+  height: 310vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 }
 @media (min-width :1301px) and (max-width: 1440px) {
@@ -1066,6 +1072,12 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
   opacity: 1;
   translate: -50px 0px;
   transition: 1s;
+}.gradient-left {
+  background-image: url(/src/assets/images/gradient-left.png);
+  width: 100%;
+  height: 330vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 }
 
@@ -1099,12 +1111,6 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
 }.optimize-h {
   top: 0px;
   left: 120px;
-}.gradient-left {
-  background-image: url(/src/assets/images/gradient-left.png);
-  width: 100%;
-  height: 330vh;
-  background-repeat: no-repeat;
-  background-size: cover;
 }.input-footer-main {
   width: 730px;
 }.input-footer{
@@ -1135,6 +1141,13 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
   100% {
     left: 100px;
   }
+}
+.gradient-left {
+  background-image: url(/src/assets/images/gradient-left.png);
+  width: 100%;
+  height: 330vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 }
 
@@ -1332,7 +1345,7 @@ padding-top: 20px;
   .gradient-left {
     background-image: url(/src/assets/images/gradient-left.png);
     width: 100%;
-    height: 420vh;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -1421,7 +1434,7 @@ padding-top: 20px;
   }
 
   .banner-2nd {
-    height: 80vh;
+    height: 90vh;
   }
 
   .light-img {
