--- a/src/App.css
+++ b/src/App.css
@@ -1492,7 +1492,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
     animation: showHide 5s ease-in-out infinite;
     left: -74px;
     bottom: -35px;
-    width: 50%;
+    width: 40%;
 }.token-text {
   left: -11px;
   bottom: -10px;
@@ -1502,7 +1502,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
 @media screen and (min-width: 0px) and (max-width: 480px) {
   .input-footer-main {
     width: 335px;
-    height: 43px;
+    height: 44px;
   }
 
   .input-footer {
@@ -1599,6 +1599,12 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 52%, rgba(144,17,178,1) 100%); 
   .roadmap-circle-top {
     width: 30%;
   }
+  .circle-Bottom-Ani-road {
+    animation: showHide 5s ease-in-out infinite;
+    left: -80px;
+    bottom: -35px;
+    width: 50%;
+}
 
   .token-text {
     left: -6px;
